tests/specs/ecosystem/jesubohr/hotkeypad/0_1_1.test
jesubohr/hotkeypad/0.1.1
-- deno.lock --
{
  "version": "3",
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
TS2304 [ERROR]: Cannot find name 'HTMLElement'.
  declare instance: HTMLElement;
                    ~~~~~~~~~~~
    at file://<tmpdir>/src/mod.ts:4:21

error: Type checking failed.

